# trepa-onchain-svm

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
migrations/: claimReward.ts  constants.ts  createPool.ts  deploy.ts  getPredictionData.ts  getPredictionValue.ts  initPool.ts  initialize.ts  postPrediction.ts  resolvePool.ts  sendBatchedTransfer.ts  updateConfig.ts
migrations/utils/: claimReward.ts  createBatchTransfer.ts  createPool.ts  createPrediction.ts  getAccountsData.ts  getPDAs.ts  getPredictionValue.ts  index.ts  resolvePool.ts
ncn_listener/: Cargo.toml
ncn_listener/src/: constants.rs  main.rs
ncn_node/: .env_example  Cargo.toml  README.md  merkle.json
ncn_node/src/: constants.rs  lib.rs  merkle_root_upload_workflow.rs
ncn_node/src/utils/: constants.rs  mod.rs  upload_merkle_root.rs  upload_merkle_root_ix.rs
programs/onchain_svm/: Cargo.toml
programs/onchain_svm/src/: accounts.rs  context.rs  lib.rs
programs/trepa/: Cargo.toml
programs/trepa/src/: context.rs  lib.rs
tests/: init.test.ts  onchain_svm.ts  stable.test.ts
