[workspace]
# empty table – the package now acts as a standalone project
[package]
name = "resolution-prover"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Collection of binaries used to distribute MEV rewards to delegators and validators."
publish = false

[dependencies]
anchor-lang = "0.27.0"
anyhow = "1.0.97"
borsh = "0.9.3"
chrono = "0.4.40"
clap = { version = "4.1.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.3"
futures = "0.3.31"
gethostname = "0.2.3"
hex = "0.4.3"
log = "0.4.25"
once_cell = "1.21.3"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
solana-client = "2.2.6"
solana-merkle-tree = "2.2.6"
solana-program = "2.2.1"
solana-rpc-client-api = "2.2.6"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.6"
spl-associated-token-account = "6.0.0"
thiserror = "1.0.38"
tokio = { version = "1.18.2", features = ["sync", "time"] }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[[bin]]
name = "solana-merkle-root-uploader"
path = "src/bin/merkle-root-uploader.rs"
