[package]
name = "onchain_svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_svm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = ["debug-assertions"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
